--webkit-visual-word should be able to reach end of text, instead of end of line https://bugs.webkit.org/show_bug.cgi?id=72048

Reviewed by Ryosuke Niwa.

Source/WebCore: 

Revert r92223 -- webkit-visual-word should reach boundary of line.
When there is no more left or right words in the same editing boundary and
current position is an editable position, return start or end position in this
editable content.

Test: editing/selection/move-by-word-visually-textarea.html

* editing/visible_units.cpp:
(WebCore::collectWordBreaksInBoxInsideBlockWithSameDirectionality):
(WebCore::collectWordBreaksInBoxInsideBlockWithDifferntDirectionality):
(WebCore::leftWordPosition):
(WebCore::rightWordPosition):

LayoutTests: 

* editing/selection/move-by-word-visually-inline-block-positioned-element-expected.txt:
* editing/selection/move-by-word-visually-inline-block-positioned-element.html:
* editing/selection/move-by-word-visually-multi-line-expected.txt:
* editing/selection/move-by-word-visually-multi-line.html:
* editing/selection/move-by-word-visually-single-space-inline-element-expected.txt:
* editing/selection/move-by-word-visually-textarea-expected.txt: Added.
* editing/selection/move-by-word-visually-textarea.html: Added.


git-svn-id: svn://svn.chromium.org/blink/trunk@101430 bbb929c8-8fbe-4397-9dbb-9b2b20218538